--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "jesslodge",
   "version": "0.1.0",
   "private": true,
-  "homepage": "jesslodge.com",
+  "homepage": "https://jklodge.github.com/www.jesslodge.com/",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.17",
     "@fortawesome/free-solid-svg-icons": "^5.8.1",
